2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineTreeView.cpp:
	* TextViewEditable.h:
	* TextViewEditable.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TextViewEditable.h:
	* TextViewEditable.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* style.css:
	* none.png:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* OutlineEditor.ui:
	* OutlineTreeView.ui:
	* X3DBrowserWindow.cpp:
	* OutlineEditor.h:
	* X3DConsoleUI.h:
	* OutlineEditor.cpp:
	* X3DConsoleUI.cpp:
	* OutlineTreeView.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* X3DBrowserWindowUI.h:
	* X3DHistoryEditorUI.h:
	* X3DOutlineEditorUI.h:
	* X3DHistoryEditorUI.cpp:
	* X3DOutlineEditorUI.cpp:
	* X3DBrowserWindowUI.cpp:
	* X3DViewpointEditorUI.h:
	* X3DOutlineTreeViewUI.h:
	* X3DMotionBlurEditorUI.h:
	* X3DOutlineTreeViewUI.cpp:
	* X3DViewpointEditorUI.cpp:
	* X3DMotionBlurEditorUI.cpp:
	* TextViewEditable.h:
	* TextViewEditable.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.cpp:
	* OutlineCellRenderer.cpp: 

2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* inputOnly.2.png:
	* inputOnly.1.png:
	* outputOnly.1.png:
	* outputOnly.2.png:
	* inputOutput.2.0.png:
	* inputOutput.2.1.png:
	* inputOutput.2.2.png:
	* inputOutput.0.2.png:
	* inputOutput.0.1.png:
	* inputOutput.1.0.png:
	* inputOutput.1.2.png:
	* inputOutput.1.1.png: 

2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* eventIn.0.png:
	* eventOut.0.png:
	* AccessTypes.xcf:
	* inputOnly.0.png:
	* outputOnly.0.png:
	* initializeOnly.png:
	* OutlineTreeData.h:
	* inputOutput.0.0.png:
	* exposedField.0.0.png:
	* OutlineTreeModel.h: