@@ -1,3 +1,11 @@
+2013-07-19  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineTreeView.h:
+	* OutlineTreeView.cpp:
+	* TextViewEditable.h:
+	* TextViewEditable.cpp:
+	* OutlineCellRenderer.cpp: 
+
 2013-07-18  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* OutlineTreeView.h:
